--- a/Documents/NetBeansProjects/FacialSystem/src/facialsystem/FXMLDocument.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/facialsystem/FXMLDocument.fxml
@@ -57,36 +57,6 @@
                </font>
             </Button>
          </children></Pane>
-      <AnchorPane fx:id="Tab" layoutX="247.0" layoutY="168.0" prefHeight="670.0" prefWidth="1053.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="247.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="168.0">
-         <children>
-            <Pane layoutX="-7.0" layoutY="5.0" prefHeight="664.0" prefWidth="1060.0" style="-fx-background-color: #182334; -fx-border-color: #273a58;">
-               <children>
-                  <TextField fx:id="name" layoutX="80.0" layoutY="120.0" promptText="Teacher Name" />
-                  <TextField fx:id="id" layoutX="80.0" layoutY="189.0" promptText="Teacher ID" />
-                  <TextField fx:id="st" layoutX="80.0" layoutY="277.0" promptText="StartTime: e.g 13:00:00" />
-                  <ComboBox editable="true" layoutX="325.0" layoutY="120.0" prefWidth="150.0" promptText="Level" />
-                  <ComboBox fx:id="CC" editable="true" layoutX="325.0" layoutY="164.0" prefWidth="150.0" promptText="CurseCode" />
-                  <TextField fx:id="ET" layoutX="326.0" layoutY="277.0" promptText="End Time: e.g 15:00" />
-                  <ImageView fx:id="T_img" fitHeight="207.0" fitWidth="299.0" layoutX="609.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label fx:id="greet_txt" layoutX="146.0" layoutY="25.0" prefHeight="57.0" prefWidth="351.0" text="Good Day Mr John Doe" textFill="#f5f2f2">
-                     <font>
-                        <Font size="32.0" />
-                     </font>
-                  </Label>
-                  <Button id="button1" fx:id="en_cl" layoutX="432.0" layoutY="429.0" mnemonicParsing="false" onAction="#EndClass" prefHeight="63.0" prefWidth="177.0" stylesheets="@../style.css" text="End Class" textFill="#f2ecec">
-                     <font>
-                        <Font size="29.0" />
-                     </font>
-                  </Button>
-                  <Button id="button1" fx:id="class_lst" layoutX="103.0" layoutY="435.0" mnemonicParsing="false" onAction="#viewList" prefHeight="64.0" prefWidth="255.0" stylesheets="@../style.css" text="View  Class List" textFill="#f5f2f2">
-                     <font>
-                        <Font name="Calibri" size="33.0" />
-                     </font>
-                  </Button>
-                  <TextField fx:id="CN" layoutX="326.0" layoutY="212.0" prefHeight="25.0" prefWidth="318.0" promptText="Course Name" />
-               </children>
-            </Pane>
-         </children>
-      </AnchorPane>
+      <AnchorPane fx:id="Tab" layoutX="233.0" layoutY="168.0" prefHeight="672.0" prefWidth="1068.0" AnchorPane.bottomAnchor="-3.0" AnchorPane.leftAnchor="233.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="168.0" />
     </children>
 </AnchorPane>
