--- a/Documents/NetBeansProjects/FacialSystem/src/facialsystem/login.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/facialsystem/login.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.paint.*?>
@@ -7,36 +10,188 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="821.0" prefWidth="1301.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="facialsystem.LoginController">
+<AnchorPane fx:id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="1305.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="facialsystem.LoginController">
    <children>
-      <Pane layoutX="2.0" layoutY="-1.0" prefHeight="821.0" prefWidth="1301.0" style="-fx-background-color: #f1f1f1;">
+      <Pane layoutX="-3.0" layoutY="-1.0" prefHeight="767.0" prefWidth="1306.0" style="-fx-background-color: #f1f1f1;" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="2.0">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" height="351.0" layoutX="440.0" layoutY="245.0" strokeType="INSIDE" width="494.0">
-               <fill>
-                  <LinearGradient endX="1.0" endY="1.0" startX="0.6333333333333333">
-                     <stops>
-                        <Stop color="#6a7a8a" />
-                        <Stop color="WHITE" offset="1.0" />
-                     </stops>
-                  </LinearGradient>
-               </fill>
-               <stroke>
-                  <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-                     <stops>
-                        <Stop color="BLACK" />
-                        <Stop color="#f1f1f1" offset="1.0" />
-                     </stops>
-                  </RadialGradient>
-               </stroke>
-            </Rectangle>
-            <TextField fx:id="name" layoutX="621.0" layoutY="261.0" prefHeight="35.0" prefWidth="287.0" promptText="User Name" />
-            <TextField fx:id="passwd" layoutX="629.0" layoutY="348.0" prefHeight="35.0" prefWidth="279.0" promptText="Enter Password" />
-            <Label layoutX="484.0" layoutY="261.0" prefHeight="35.0" prefWidth="93.0" text="User Name" />
-            <Label layoutX="483.0" layoutY="346.0" prefHeight="29.0" prefWidth="67.0" text="Password" />
-            <Button alignment="CENTER_RIGHT" layoutX="661.0" layoutY="457.0" mnemonicParsing="false" onAction="#validateCreds" prefHeight="74.0" prefWidth="255.0" text="Validate" textOverrun="CENTER_ELLIPSIS">
-               <graphic>
-                  <ImageView fitHeight="66.0" fitWidth="158.0" pickOnBounds="true" preserveRatio="true" />
-               </graphic></Button>
+            <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-8.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+               <image>
+                  <Image url="@../../Dependency/ba.png" />
+               </image>
+               <effect>
+                  <Blend />
+               </effect>
+            </ImageView>
+            <Pane layoutX="-7.0" layoutY="95.0">
+               <children>
+                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <image>
+                        <Image url="@../../Dependency/ba.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="3.0" layoutY="105.0">
+               <children>
+                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-10.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <image>
+                        <Image url="@../../Dependency/ba.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-11.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <image>
+                        <Image url="@../../Dependency/ba.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="2.0" layoutY="294.0">
+               <children>
+                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-10.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <image>
+                        <Image url="@../../Dependency/ba.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-10.0" layoutY="185.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <image>
+                        <Image url="@../../Dependency/ba.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="96.0" fitWidth="1326.0" focusTraversable="true" layoutX="-9.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <image>
+                        <Image url="@../../Dependency/ba.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView blendMode="MULTIPLY" cache="true" fitHeight="821.0" fitWidth="1309.0" focusTraversable="true" layoutX="-9.0" layoutY="377.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <effect>
+                        <Blend />
+                     </effect>
+                     <image>
+                        <Image url="@../../Dependency/ba.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="282.0" layoutY="-84.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <image>
+                        <Image url="@../../Dependency/bacck.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="282.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <image>
+                        <Image url="@../../Dependency/bacck.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="551.0" layoutY="-84.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <image>
+                        <Image url="@../../Dependency/bacck.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="282.0" layoutY="204.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <image>
+                        <Image url="@../../Dependency/bacck.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="551.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <image>
+                        <Image url="@../../Dependency/bacck.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="145.0" fitWidth="472.0" focusTraversable="true" layoutX="551.0" layoutY="204.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <image>
+                        <Image url="@../../Dependency/bacck.jpg" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="282.0" layoutY="-74.0" prefHeight="104.0" prefWidth="485.0" text="Attendance System Login">
+                     <font>
+                        <Font size="41.0" />
+                     </font>
+                     <textFill>
+                        <LinearGradient endX="1.0" endY="1.0" startX="0.01904761904761905" startY="0.4095238095238095">
+                           <stops>
+                              <Stop color="#b5afaf" />
+                              <Stop color="WHITE" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </textFill>
+                  </Label>
+                  <VBox alignment="CENTER_LEFT" layoutX="305.0" layoutY="14.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="207.0" prefWidth="112.0">
+                     <children>
+                        <Label prefHeight="55.0" prefWidth="112.0" text="User Name:">
+                           <textFill>
+                              <LinearGradient endX="1.0" endY="1.0" startX="0.27619047619047615" startY="0.4095238095238095">
+                                 <stops>
+                                    <Stop color="#ab8989" />
+                                    <Stop color="WHITE" offset="1.0" />
+                                 </stops>
+                              </LinearGradient>
+                           </textFill>
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="57.0" prefWidth="111.0" text="Password:">
+                           <font>
+                              <Font size="23.0" />
+                           </font>
+                           <textFill>
+                              <LinearGradient endX="1.0" endY="1.0" startX="0.22857142857142854" startY="0.4095238095238095">
+                                 <stops>
+                                    <Stop color="#ab8989" />
+                                    <Stop color="WHITE" offset="1.0" />
+                                 </stops>
+                              </LinearGradient>
+                           </textFill>
+                           <effect>
+                              <Blend />
+                           </effect>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <TextField fx:id="username" layoutX="460.0" layoutY="77.0" prefHeight="35.0" prefWidth="223.0" promptText="Username" />
+                  <TextField fx:id="password" layoutX="460.0" layoutY="134.0" prefHeight="35.0" prefWidth="223.0" promptText="Password" />
+                  <Button fx:id="logingbtn" layoutX="412.0" layoutY="239.0" mnemonicParsing="false" onAction="#verifyCreds" prefHeight="77.0" prefWidth="338.0" text="LOGIN" textFill="#494f55" />
+                  <ImageView fitHeight="83.0" fitWidth="344.0" layoutX="409.0" layoutY="239.0" onDragDetected="#verifyCreds" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../Dependency/log.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
          </children>
       </Pane>
    </children>
