--- a/Documents/NetBeansProjects/FacialSystem/src/ListGenerator/listView.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/ListGenerator/listView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="465.0" prefWidth="1068.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="facialsystem.ListViewController">
+<AnchorPane id="AnchorPane" prefHeight="465.0" prefWidth="1068.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ListGenerator.ListViewController">
     <stylesheets>
         <URL value="@listview.css" />
         
@@ -18,13 +18,14 @@
    <children>
       <Pane prefHeight="465.0" prefWidth="1068.0" style="-fx-background-radius: 12;">
          <children>
-            <TableView fx:id="listTable" editable="true" layoutX="95.0" layoutY="64.0" prefHeight="310.0" prefWidth="920.0" style="-fx-background-radius: 12;" tableMenuButtonVisible="true">
+            <TableView fx:id="listTable" editable="true" layoutX="71.0" layoutY="64.0" prefHeight="310.0" prefWidth="958.0" style="-fx-background-radius: 12;" tableMenuButtonVisible="true">
               <columns>
-                <TableColumn prefWidth="266.0" text="Name" />
-                <TableColumn prefWidth="137.0" text="Matricule" />
-                  <TableColumn prefWidth="160.0" text="Start time" />
+                <TableColumn prefWidth="188.0" text="Name" />
+                <TableColumn prefWidth="183.0" text="Matricule" />
+                  <TableColumn prefWidth="192.0" text="Start time" />
                   <TableColumn prefWidth="171.0" text="End Time" />
                   <TableColumn prefWidth="128.0" text="Corse Code" />
+                  <TableColumn fx:id="state" prefWidth="75.0" text="Status" />
               </columns>
                <effect>
                   <Lighting>
