--- a/Documents/NetBeansProjects/FacialSystem/src/facialsystem/teacherInfo.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/facialsystem/teacherInfo.fxml
@@ -8,31 +8,41 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="1068.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="facialsystem.TeacherInfoController">
    <children>
-      <Pane layoutY="-2.0" prefHeight="411.0" prefWidth="1068.0" style="-fx-background-color: #182334; -fx-border-color: #273a58;">
+      <Pane layoutX="-7.0" layoutY="-14.0" prefHeight="411.0" prefWidth="1068.0" style="-fx-background-color: #182334; -fx-border-color: #273a58;">
          <children>
-            <TextField fx:id="fullname" editable="false" layoutX="80.0" layoutY="120.0" promptText="Teacher Name" style="-fx-background-radius: 8;" />
-            <TextField fx:id="id" layoutX="80.0" layoutY="189.0" promptText="Teacher ID" style="-fx-background-radius: 8;" />
-            <TextField fx:id="st" layoutX="80.0" layoutY="277.0" promptText="StartTime: e.g 13:00:00" style="-fx-background-radius: 8;" />
-            <ComboBox fx:id="levels" editable="true" layoutX="325.0" layoutY="120.0" prefWidth="150.0" promptText="Level" style="-fx-background-radius: 8;" />
-            <ComboBox fx:id="CC" editable="true" layoutX="325.0" layoutY="164.0" onAction="#getCN" prefWidth="150.0" promptText="CurseCode" style="-fx-background-radius: 8;" />
-            <TextField fx:id="ET" layoutX="326.0" layoutY="277.0" promptText="End Time: e.g 15:00" style="-fx-background-radius: 8;" />
-            <ImageView fx:id="T_img" fitHeight="207.0" fitWidth="299.0" layoutX="609.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="greet_txt" layoutX="146.0" layoutY="25.0" prefHeight="57.0" prefWidth="351.0" text="Good Day Mr John Doe" textFill="#f5f2f2">
+            <TextField fx:id="st" layoutX="133.0" layoutY="166.0" promptText="StartTime: e.g 13:00:00" style="-fx-background-radius: 8;" />
+            <TextField fx:id="ET" layoutX="564.0" layoutY="169.0" promptText="End Time: e.g 15:00" style="-fx-background-radius: 8;" />
+            <ImageView fx:id="T_img" fitHeight="137.0" fitWidth="177.0" layoutX="847.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="greet_txt" layoutX="40.0" layoutY="17.0" prefHeight="54.0" prefWidth="500.0" text="Good Day Mr./Mrs./Mss./Dr./Prof" textFill="#f5f2f2">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
-            <Button id="button1" fx:id="en_cl" layoutX="439.0" layoutY="325.0" mnemonicParsing="false" onAction="#EndClass" prefHeight="63.0" prefWidth="177.0" style="-fx-background-radius: 12;" stylesheets="@../style.css" text="End Class" textFill="#f2ecec">
+            <Button id="button1" fx:id="en_cl" disable="true" layoutX="638.0" layoutY="325.0" mnemonicParsing="false" onAction="#EndClass" prefHeight="63.0" prefWidth="177.0" style="-fx-background-radius: 12;" stylesheets="@../style.css" text="End Class" textFill="#f2ecec">
                <font>
                   <Font size="29.0" />
                </font>
             </Button>
-            <Button id="button1" fx:id="class_lst" layoutX="80.0" layoutY="326.0" mnemonicParsing="false" onAction="#viewList" prefHeight="64.0" prefWidth="255.0" style="-fx-background-radius: 12;" stylesheets="@../style.css" text="View  Class List" textFill="#f5f2f2">
+            <Button id="button1" fx:id="class_lst" layoutX="119.0" layoutY="326.0" mnemonicParsing="false" onAction="#viewList" prefHeight="64.0" prefWidth="255.0" style="-fx-background-radius: 12;" stylesheets="@../style.css" text="View  Class List" textFill="#f5f2f2">
                <font>
                   <Font name="Calibri" size="33.0" />
                </font>
             </Button>
-            <TextField fx:id="CN" layoutX="326.0" layoutY="212.0" prefHeight="25.0" prefWidth="318.0" promptText="Course Name" style="-fx-background-radius: 8;" />
+            <DatePicker fx:id="date" layoutX="672.0" layoutY="79.0" prefHeight="33.0" prefWidth="248.0" />
+            <Label layoutX="72.0" layoutY="70.0" prefHeight="25.0" prefWidth="94.0" text="Course Name" textFill="#b2aeae" />
+            <Label layoutX="72.0" layoutY="108.0" prefHeight="25.0" prefWidth="122.0" text="Class Count" textFill="#a49b9b" />
+            <Label fx:id="CN" layoutX="306.0" layoutY="74.0" prefHeight="17.0" prefWidth="197.0" text="N/A" textFill="#f2efef" />
+            <Label fx:id="id" layoutX="308.0" layoutY="112.0" prefHeight="17.0" prefWidth="149.0" text="N/A" textFill="#f8f7f7" />
+            <Label fx:id="nameTag" layoutX="595.0" layoutY="14.0" prefHeight="45.0" prefWidth="340.0" text="N/A" textFill="#fcfcfc">
+               <font>
+                  <Font size="39.0" />
+               </font>
+            </Label>
+            <Button fx:id="start" layoutX="345.0" layoutY="146.0" mnemonicParsing="false" onAction="#startClass" prefHeight="65.0" prefWidth="164.0" style="-fx-background-radius: 12; -fx-background-color: #ffff;" text="Start" textFill="#6f3333">
+               <font>
+                  <Font size="33.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
    </children>
