--- a/Documents/NetBeansProjects/FacialSystem/src/Settings/GenSets.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/Settings/GenSets.fxml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="923.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Settings.GenSetsController">
    <children>
-      <Pane prefHeight="413.0" prefWidth="1068.0">
+      <Pane prefHeight="413.0" prefWidth="1068.0" style="-fx-background-color: #243044;">
          <children>
-            <CheckBox fx:id="saingav" layoutX="34.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="337.0" text="Save Class upon Exit" />
-            <CheckBox layoutX="34.0" layoutY="76.0" mnemonicParsing="false" text="Show me when Last I Came to Class" />
-            <CheckBox layoutX="33.0" layoutY="140.0" mnemonicParsing="false" text="Show my profile picture" />
-            <Hyperlink fx:id="changeD" layoutX="135.0" layoutY="258.0" onAction="#Changepic" prefHeight="29.0" prefWidth="156.0" text="Change profile " />
+            <CheckBox fx:id="saingav" layoutX="34.0" layoutY="21.0" mnemonicParsing="false" onAction="#SaveOnExit" prefHeight="25.0" prefWidth="194.0" text="Save Class upon Exit" textFill="#d0c2c2">
+               <font>
+                  <Font size="15.0" />
+               </font></CheckBox>
+            <CheckBox layoutX="34.0" layoutY="71.0" mnemonicParsing="false" onAction="#ShowLastclass" text="Show me when Last I Came to Class" textFill="#d0c2c2">
+               <font>
+                  <Font size="15.0" />
+               </font></CheckBox>
+            <CheckBox layoutX="34.0" layoutY="119.0" mnemonicParsing="false" onAction="#Show" text="Show my profile picture" textFill="#d0c2c2">
+               <font>
+                  <Font size="15.0" />
+               </font></CheckBox>
+            <Hyperlink fx:id="changeD" layoutX="135.0" layoutY="258.0" onAction="#Changepic" prefHeight="29.0" prefWidth="156.0" text="Change profile ">
+               <font>
+                  <Font size="15.0" />
+               </font></Hyperlink>
+            <CheckBox layoutX="34.0" layoutY="157.0" mnemonicParsing="false" onAction="#chooseAttendance" text="Choose when to take attendance" textFill="#d0c2c2">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </CheckBox>
          </children>
       </Pane>
    </children>
