--- a/Documents/NetBeansProjects/FacialSystem/src/Settings/CameraSets.fxml
+++ b/Documents/NetBeansProjects/FacialSystem/src/Settings/CameraSets.fxml
@@ -1,7 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="923.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Settings.CameraSetsController"/>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="413.0" prefWidth="923.0" style="-fx-background-color: #243154;" stylesheets="@GenStyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Settings.CameraSetsController">
+   <children>
+      <Label layoutX="28.0" layoutY="34.0" prefHeight="23.0" prefWidth="120.0" text="Select Classifier" textFill="#e1d8d8">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <ComboBox fx:id="Classifier" layoutX="223.0" layoutY="34.0" onAction="#selectCassifier" prefHeight="23.0" prefWidth="194.0" />
+      <Label layoutX="30.0" layoutY="89.0" text="Frames Captured per Second" textFill="#e1d8d8">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <TextField fx:id="FrameBox" layoutX="228.0" layoutY="85.0" text="33" />
+      <Label layoutX="28.0" layoutY="140.0" prefHeight="21.0" prefWidth="168.0" text="Minimum Feauture Size" textFill="#e1d8d8">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <TextField fx:id="height" layoutX="229.0" layoutY="136.0" prefHeight="25.0" prefWidth="93.0" promptText="Height eg 129" text="20" />
+      <TextField fx:id="width" layoutX="345.0" layoutY="136.0" prefHeight="25.0" prefWidth="93.0" promptText="Width e.g 195" text="20" />
+      <Label layoutX="319.0" layoutY="131.0" prefHeight="32.0" prefWidth="28.0" text=" X" textFill="#ab7f7f">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <Label layoutX="28.0" layoutY="180.0" prefHeight="21.0" prefWidth="149.0" text="Max Face Size" textFill="#e1d8d8">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <TextField fx:id="AvgF" editable="false" layoutX="228.0" layoutY="174.0" prefHeight="25.0" prefWidth="217.0" promptText="Average Face Size" />
+      <Button id="button1" layoutX="335.0" layoutY="326.0" mnemonicParsing="false" onAction="#saveSetsData" prefHeight="52.0" prefWidth="270.0" style="-fx-background-radius: 8;" text="Save">
+         <font>
+            <Font size="31.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#b29797" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+      </Button>
+      <Label layoutX="28.0" layoutY="219.0" prefHeight="21.0" prefWidth="149.0" text="Search Scale Factor" textFill="#e1d8d8">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="28.0" layoutY="254.0" text=" " />
+      <TextField fx:id="searchscaleFactor" layoutX="227.0" layoutY="215.0" prefHeight="25.0" prefWidth="217.0" text="1.1" />
+      <Label layoutX="502.0" layoutY="37.0" prefHeight="21.0" prefWidth="149.0" text="Minimum Neighbours" textFill="#e1d8d8">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="MinN" layoutX="657.0" layoutY="33.0" prefHeight="25.0" prefWidth="168.0" promptText="Numbers only" text="4" />
+      <Label layoutX="502.0" layoutY="89.0" prefHeight="25.0" prefWidth="120.0" text="Image Width" textFill="#e1d8d8">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="imgWidth" layoutX="656.0" layoutY="89.0" prefHeight="25.0" prefWidth="168.0" promptText="image View Width" text="800" />
+      <Label layoutX="447.0" layoutY="216.0" prefHeight="23.0" prefWidth="36.0" text="f" textFill="#ddd0d0" />
+   </children>
+</AnchorPane>
